Fix visual bug where the titles of cards were not passed through correctly. Also significant dashboard improvements.
